Added user login, logout, and sign up

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -35,7 +35,7 @@
       </div>
       <div class="blognav-right">
         {{#if logged_in}}
-        <button class="no-button" id="logout">logout</button>
+        <button class="no-button" id="logout">LOGOUT</button>
         {{else}}
         <a href="/login">
           <p>LOGIN</p>
@@ -45,7 +45,7 @@
     </header>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    
+
     <main class="blognav-present">
       <!-- Render the sub layout -->
       {{{ body }}}
