--- a/views/blogpost.handlebars
+++ b/views/blogpost.handlebars
@@ -1,7 +1,15 @@
-<div class="text-center">
-  <h2>{{title}}</h2>
-  <p>Created by {{user.name}} on {{format_date date_created}}</p>
-  <p>{{content}}</p>
+<div class="blogpost-container">
+  <div class="blogPost">
+    <div class="blogPost-header">
+      <h2>
+        <p>{{title}}</p>
+      </h2>
+      <p>Created by {{user.name}} on {{format_date date_created}}</p>
+    </div>
+    <div class="blogPost-content">
+      <p>{{content}}</p>
+    </div>
+  </div>
   
 
   <p>
