--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,17 +1,17 @@
-<!-- Loop over each object in the projects array -->
-{{#each blogPosts as |blogPost| }}
-<div class="row mb-4 project">
-  <div class="col-md-5">
-    <h2>
-      <a href="/blogpost/{{blogPost.id}}">{{blogPost.title}}</a>
-    </h2>
+<section class="homepage-container">
+  <!-- Loop over each object in the projects array -->
+  {{#each blogPosts as |blogPost| }}
+  <div class="blogPost">
+    <div class="blogPost-header">
+      <h2>
+        <a href="/blogpost/{{blogPost.id}}">{{blogPost.title}}</a>
+      </h2>
+      <p>Created by {{blogPost.user.name}} on {{format_date blogPost.date_created}}</p>
+    </div>
+    <div class="blogPost-content">
+      <p>{{blogPost.content}}</p>
+    </div>
+  </div>
+  {{/each}}
+</section>
 
-    <p>Created by {{blogPost.user.name}} on {{format_date blogPost.date_created}}</p>
-  </div>
-  <div class="col-md-7">
-    {{!-- <p>
-      {{blogPost.content}}
-    </p> --}}
-  </div>
-</div>
-{{/each}}
