--- a/public/css/style.css
+++ b/public/css/style.css
@@ -113,6 +113,72 @@ main {
   padding: 8px;
 }
 
+/********************************** login.handlebars **********************************/
+.login-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 16px;
+}
+
+.login-form {
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  border: #808080 solid 2px;
+  border-radius: 4px;
+  width: 400px;
+}
+
+.login-form h2{
+  background-color: #e2d0b7;
+  padding: 8px;
+  border-bottom: #808080 solid 1px;
+}
+
+.login-body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 8px;
+  gap: 8px;
+}
+
+.login-footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 8px;
+}
+
+.form-input {
+  border-radius: 6px;
+  font-size: 14px;
+  line-height: 16px;
+  width: 300px;
+  height: 42px;
+  padding-left: 16px;
+  background-color: white;
+  border: #808080 solid 1px;
+}
+
+.login-body button {
+  border-radius: 6px;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 16px;
+  width: 300px;
+  height: 42px;
+  color: #fff;
+  background-color: #5385ca;
+  border: #808080 solid 1px;
+}
+
+.login-body button:hover {
+  background-color: #4a76b4;
+  cursor: pointer;
+}
+
 /********************************** blogpost.handlebars **********************************/
 .blogpost-container {
   display: flex;
