--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,42 +1,21 @@
-<div class="row">
-  <div class="col-md-6">
+<div class="login-container">
+  <form class="form login-form">
     <h2>Login</h2>
-
-    <form class="form login-form">
+    <div class="login-body">
       <div class="form-group">
-        <label for="email-login">email:</label>
-        <input class="form-input" type="text" id="email-login" />
+        <label for="email-login"></label>
+        <input class="form-input" type="text" id="email-login" placeholder="Email"/>
       </div>
       <div class="form-group">
-        <label for="password-login">password:</label>
-        <input class="form-input" type="password" id="password-login" />
+        <label for="password-login"></label>
+        <input class="form-input" type="password" id="password-login" placeholder="Password"/>
       </div>
-      <div class="form-group">
-        <button class="btn btn-primary" type="submit">login</button>
-      </div>
-    </form>
-  </div>
-  <div class="col-md-6">
-    <h2>Signup</h2>
-
-    <form class="form signup-form">
-      <div class="form-group">
-        <label for="name-signup">name:</label>
-        <input class="form-input" type="text" id="name-signup" />
-      </div>
-      <div class="form-group">
-        <label for="email-signup">email:</label>
-        <input class="form-input" type="text" id="email-signup" />
-      </div>
-      <div class="form-group">
-        <label for="password-signup">password:</label>
-        <input class="form-input" type="password" id="password-signup" />
-      </div>
-      <div class="form-group">
-        <button class="btn btn-primary" type="submit">signup</button>
-      </div>
-    </form>
-  </div>
+      <button class="btn btn-primary" type="submit">Login</button>
+    </div>
+    <div class="login-footer">
+      <p>New here? <a href="/signup">Sign Up</a></p>
+    </div>
+  </form>
 </div>
 
 <script src="./js/login.js"></script>
