Added signup page styles

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -13,9 +13,9 @@
       <button class="btn btn-primary" type="submit">Login</button>
     </div>
     <div class="login-footer">
-      <p>New here? <a href="/signup">Sign Up</a></p>
+      <p>New here? <a href="./signup" id="signup">Sign Up</a></p>
     </div>
   </form>
 </div>
 
-<script src="./js/login.js"></script>
+<script src="/js/login.js"></script>
