--- a/public/css/style.css
+++ b/public/css/style.css
@@ -114,14 +114,16 @@ main {
 }
 
 /********************************** login.handlebars **********************************/
-.login-container {
+.login-container,
+.signup-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   padding-top: 16px;
 }
 
-.login-form {
+.login-form,
+.signup-form {
   display: flex;
   flex-direction: column;
   background-color: white;
@@ -130,13 +132,15 @@ main {
   width: 400px;
 }
 
-.login-form h2{
+.login-form h2,
+.signup-form h2 {
   background-color: #e2d0b7;
   padding: 8px;
   border-bottom: #808080 solid 1px;
 }
 
-.login-body {
+.login-body,
+.signup-body {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -162,7 +166,8 @@ main {
   border: #808080 solid 1px;
 }
 
-.login-body button {
+.login-body button,
+.signup-body button {
   border-radius: 6px;
   font-size: 16px;
   font-weight: 500;
@@ -174,7 +179,8 @@ main {
   border: #808080 solid 1px;
 }
 
-.login-body button:hover {
+.login-body button:hover,
+.signup-body button:hover {
   background-color: #4a76b4;
   cursor: pointer;
 }
