--- a/public/css/style.css
+++ b/public/css/style.css
@@ -78,7 +78,7 @@ main {
   padding: 8px 0px;
 }
 
-.blogPost {
+.blogpost {
   display: flex;
   flex-direction: column;
   background-color: white;
@@ -87,7 +87,8 @@ main {
   width: 600px;
 }
 
-.blogPost-header {
+.blogpost-header,
+.new-comment-header {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -96,20 +97,20 @@ main {
   border-bottom: #808080 solid 1px;
 }
 
-.blogPost-header a {
+.blogpost-header a {
   text-decoration: none;
   color: #355683;
 }
 
-.blogPost-header a:visited {
+.blogpost-header a:visited {
   color: #6f93c5;
 }
 
-.blogPost-header p {
+.blogpost-header p {
   font-size: 12px;
 }
 
-.blogPost-content {
+.blogpost-content {
   padding: 8px;
 }
 
@@ -193,4 +194,22 @@ main {
   
   gap: 8px;
   padding: 8px 0px;
+}
+
+.new-comment-wrapper {
+  display: flex;
+  flex-direction: column;
+  background-color: #e2d0b7;
+  border: #808080 solid 2px;
+  border-radius: 4px;
+  width: 600px;
+}
+
+.new-comment {
+  background-color: #fff;
+  border-top: #808080 solid 1px;
+  margin: 30px 0px 0px 0px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
