--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -2,7 +2,7 @@
     <form class="form signup-form">
         <h2>Signup</h2>
         <div class="signup-body">
-            <div>
+            <div class="form-group">
                 <label for="name-signup"></label>
                 <input class="form-input" type="text" id="name-signup" placeholder="Name"/>
             </div>
