Updated dashboard routes, updated create route, began update/delete

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,27 +1,23 @@
 <section class="dashboard-container">
+    <h2>Welcome, {{name}}</h2>
     <section class="dashboard-controls">
         <a href="./dashboard/create" id="create">Create a new post</a>
     </section>
     <section class="my-posts">
-        <section class="my-posts-header">
-
-        </section>
-        <section class="my-posts-body">
-            {{#if blogPosts.length }}
-            {{#each blogPosts as |blogPost| }}
-            <div class="blogpost">
-                <div class="blogpost-header">
-                    <h2>
-                        <a>{{blogPost.title}}</a>
-                    </h2>
-                    <p>Created on {{format_date blogPost.date_created}}</p>
-                </div>
-                <div class="blogpost-content">
-                    <p>{{blogPost.content}}</p>
-                </div>
+        {{#if blogposts.length }}
+        {{#each blogposts as |blogPost| }}
+        <div class="blogpost">
+            <div class="blogpost-header">
+                <h2>
+                    <a href="./dashboard/edit/{{blogPost.id}}">{{blogPost.title}}</a>
+                </h2>
+                <p>Created on {{format_date blogPost.date_created}}</p>
             </div>
-            {{/each}}
-            {{/if}}
-        </section>
+            <div class="blogpost-content">
+                <p>{{blogPost.content}}</p>
+            </div>
+        </div>
+        {{/each}}
+        {{/if}}
     </section>
 </section>
