--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -4,7 +4,7 @@
   <div class="blogpost">
     <div class="blogpost-header">
       <h2>
-        <a href="/blogpost/{{blogPost.id}}">{{blogPost.title}}</a>
+        <a href="api/blogposts/{{blogPost.id}}">{{blogPost.title}}</a>
       </h2>
       <p>Created by {{blogPost.user.name}} on {{format_date blogPost.date_created}}</p>
     </div>
