--- a/public/css/style.css
+++ b/public/css/style.css
@@ -69,7 +69,9 @@ main {
 }
   
 /********************************** homepage.handlebars **********************************/
-.homepage-container {
+.homepage-container,
+.dashboard-container,
+.my-posts {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -191,7 +193,8 @@ main {
 }
 
 /********************************** blogpost.handlebars **********************************/
-.blogpost-container {
+.blogpost-container,
+.edit-container {
   display: flex;
   flex-direction: column;
   align-items: center;
