--- a/views/create.handlebars
+++ b/views/create.handlebars
@@ -11,7 +11,7 @@
                 <input class="form-input" type="text" id="post-content"/>
             </div>
             <div class="form-group">
-                <button class="btn btn-primary" type="submit" id="create-btn">Create</button>
+                <button class="btn btn-primary" type="submit" id="create-btn" user-id="{{id}}">Create</button>
             </div>
         </div>
     </section>
