--- a/views/comment.handlebars
+++ b/views/comment.handlebars
@@ -12,7 +12,7 @@
   </section>
   
   <section class="new-comment-wrapper">
-    <div class="new-comment" user-id="{{logged_in_user}}">
+    <div class="new-comment" logged_in_user="{{logged_in_user}}">
       <div class="form-group">
         <label for="comment-content"></label>
         <input class="form-input" type="text" id="comment-content" placeholder="Let {{user.name}} know what you think"/>
