Added code for updating a blog post

--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -1,6 +1,6 @@
 <div class="edit-container">
     <section class="edit-controls">
-        <button class="btn btn-primary" type="submit" id="update-btn">Update</button>
+        <a href="../update/{{id}}">Update</a>
         <button class="btn btn-primary" type="submit" id="delete-btn">Delete</button>
     </section>
     <section class="blogpost">
