Added code for deleting a post

--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -3,7 +3,7 @@
         <a href="../update/{{id}}">Update</a>
         <button class="btn btn-primary" type="submit" id="delete-btn">Delete</button>
     </section>
-    <section class="blogpost">
+    <section class="blogpost" id="{{id}}">
         <div class="blogpost-header">
             <h2>
             <p>{{title}}</p>
