--- a/views/create.handlebars
+++ b/views/create.handlebars
@@ -3,11 +3,11 @@
         <h2>Create A New Post</h2>
         <div class="create-body">
             <div class="form-group">
-                <label for="post-title">Title: </label>
+                <label for="post-title">Title </label>
                 <input class="form-input" type="text" id="post-title"/>
             </div>
             <div class="form-group">
-                <label for="post-content">Content: </label>
+                <label for="post-content">Content </label>
                 <input class="form-input" type="text" id="post-content"/>
             </div>
             <div class="form-group">
