--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -1,6 +1,6 @@
 <div class="edit-container">
     <section class="edit-controls">
-        <a href="../update/{{id}}">Update</a>
+        <a href="../update/{{id}}" id="update-link">Update</a>
         <button class="btn btn-primary" type="submit" id="delete-btn">Delete</button>
     </section>
     <section class="blogpost" id="{{id}}">
