--- a/views/update.handlebars
+++ b/views/update.handlebars
@@ -12,16 +12,19 @@
     </section>
 
     <section class="create-form">
-        <div class="form-group">
-            <label for="post-title">Title: </label>
-            <input class="form-input" type="text" id="post-title" value="{{title}}"/>
-        </div>
-        <div class="form-group">
-            <label for="post-content">Content: </label>
-            <input class="form-input" type="text" id="post-content" value="{{content}}"/>
-        </div>
-        <div class="form-group">
-            <button class="btn btn-primary" type="submit" id="update-btn">Update</button>
+        <h2>Update Your Post</h2>
+        <div class="create-body">
+            <div class="form-group">
+                <label for="post-title">Title </label>
+                <input class="form-input" type="text" id="post-title" value="{{title}}"/>
+            </div>
+            <div class="form-group">
+                <label for="post-content">Content </label>
+                <input class="form-input" type="text" id="post-content" value="{{content}}"/>
+            </div>
+            <div class="form-group">
+                <button class="btn btn-primary" type="submit" id="create-btn">Update</button>
+            </div>
         </div>
     </section>
 </div>
